--- a/src/BaroquenMelody.App.Components/Shared/InstrumentTonalRange.razor
+++ b/src/BaroquenMelody.App.Components/Shared/InstrumentTonalRange.razor
@@ -47,7 +47,7 @@
                    @bind-Value="LowestPitchNoteIndex"
                    Label="Lowest Pitch"
                    Variant="Variant.Outlined"
-                   AdornmentIcon="@Icons.Material.Outlined.PlayArrow"
+                   AdornmentIcon="@Icons.Material.Outlined.PlayCircle"
                    Adornment="Adornment.End"
                    AdornmentColor="Color.Secondary"
                    OnAdornmentClick="async () => await _instrumentRangePlayer!.PlayLowNote()"
@@ -63,7 +63,7 @@
                    Label="Highest Pitch"
                    T="int"
                    Variant="Variant.Outlined"
-                   AdornmentIcon="@Icons.Material.Outlined.PlayArrow"
+                   AdornmentIcon="@Icons.Material.Outlined.PlayCircle"
                    Adornment="Adornment.End"
                    AdornmentColor="Color.Secondary"
                    OnAdornmentClick="async () => await _instrumentRangePlayer!.PlayHighNote()"
