--- a/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
+++ b/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
@@ -27,7 +27,7 @@
                 <MudMenuItem Icon="@Icons.Material.Sharp.Lightbulb" IconColor="Color.Warning" Href="https://github.com/wbaldoumas/baroquen-melody/issues/new?template=FEATURE_REQUEST.md">Feature request</MudMenuItem>
                 <MudMenuItem Icon="@Icons.Material.Sharp.BugReport" IconColor="Color.Tertiary" Href="https://github.com/wbaldoumas/baroquen-melody/issues/new?template=BUG_REPORT.md">Report a bug</MudMenuItem>
                 <MudMenuItem Icon="@Icons.Material.Sharp.Shield" IconColor="Color.Info" Href="https://github.com/wbaldoumas/baroquen-melody/security/policy">Report a vulnerability</MudMenuItem>
-                <MudMenuItem Icon="@Icons.Material.Sharp.Favorite" IconColor="Color.Secondary">Donate</MudMenuItem>
+                <MudMenuItem Icon="@Icons.Material.Sharp.Coffee" IconColor="Color.Secondary" Href="https://buymeacoffee.com/baroquenmelody">Buy me a coffee</MudMenuItem>
             </MudMenu>
         </MudTooltip>
     </MudAppBar>
