--- a/src/BaroquenMelody.App.Components/Shared/CardHeaderSwitch.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CardHeaderSwitch.razor
@@ -40,7 +40,7 @@
                         <MudSwitch T="bool"
                                    Label="Lock"
                                    Value="IsLocked"
-                                   Color="Color.Info"
+                                   Color="Color.Primary"
                                    LabelPosition="LabelPosition.Start"
                                    ThumbIconColor="Color.Dark"
                                    ThumbIcon="@IsLockedIcon"
