--- a/src/BaroquenMelody.App.Components/_Imports.razor
+++ b/src/BaroquenMelody.App.Components/_Imports.razor
@@ -6,6 +6,7 @@
 @using BaroquenMelody.App
 @using BaroquenMelody.App.Components
 @using BaroquenMelody.App.Components.Shared
+@using BaroquenMelody.Infrastructure.Application
 @using BaroquenMelody.Infrastructure.Devices
 @using BaroquenMelody.Infrastructure.Extensions
 @using BaroquenMelody.Infrastructure.State
@@ -59,3 +60,4 @@
 @inject IPhysicalDeviceInfo PhysicalDeviceInfo
 @inject IJSRuntime JsRuntime
 @inject IMidiExampleGenerator MidiExampleGenerator
+@inject IApplicationInfo ApplicationInfo
