--- a/src/BaroquenMelody.App.Components/Shared/SaveCompositionConfigurationDialog.razor
+++ b/src/BaroquenMelody.App.Components/Shared/SaveCompositionConfigurationDialog.razor
@@ -29,6 +29,13 @@
 
     [CascadingParameter] private MudDialogInstance? MudDialog { get; set; }
 
+    protected override void OnInitialized()
+    {
+        ConfigurationName = SavedCompositionConfigurationState.Value.LastLoadedConfigurationName;
+
+        base.OnInitialized();
+    }
+
     private async Task SaveCompositionConfiguration()
     {
         var configurationFileExists = await CompositionConfigurationPersistenceService.DoesConfigurationExist(
