--- a/src/BaroquenMelody.App.Components/_Imports.razor
+++ b/src/BaroquenMelody.App.Components/_Imports.razor
@@ -43,6 +43,7 @@
 @inject IState<CompositionConfigurationState> CompositionConfigurationState
 @inject IState<CompositionProgressState> CompositionProgressState
 @inject IState<BaroquenMelodyState> BaroquenMelodyState
+@inject IState<SavedCompositionConfigurationState> SavedCompositionConfigurationState
 @inject IDispatcher Dispatcher
 @inject IOrnamentationConfigurationService OrnamentationConfigurationService
 @inject ICompositionRuleConfigurationService CompositionRuleConfigurationService
