Fix Breaking Changes

--- a/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
+++ b/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
@@ -49,7 +49,7 @@
 
     private void OpenAbout()
     {
-        DialogService.Show<About>(
+        DialogService.ShowAsync<About>(
             "About Baroquen Melody",
             new DialogOptions
             {
