--- a/src/BaroquenMelody.App.Components/Shared/CardHeaderSwitch.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CardHeaderSwitch.razor
@@ -11,7 +11,7 @@
                                    Label="Enable"
                                    Value="IsEnabled"
                                    Color="Color.Tertiary"
-                                   LabelPosition="LabelPosition.Start"
+                                   LabelPlacement="Placement.Start"
                                    ThumbIcon="@IsEnabledIcon"
                                    Disabled="IsLocked"
                                    ThumbIconColor="Color.Dark"
@@ -20,7 +20,7 @@
                                    Label="Lock"
                                    Value="IsLocked"
                                    Color="Color.Primary"
-                                   LabelPosition="LabelPosition.Start"
+                                   LabelPlacement="Placement.Start"
                                    ThumbIconColor="Color.Dark"
                                    ThumbIcon="@IsLockedIcon"
                                    ValueChanged="IsLockedChanged"/>
@@ -32,7 +32,7 @@
                                    Label="Enable"
                                    Value="IsEnabled"
                                    Color="Color.Tertiary"
-                                   LabelPosition="LabelPosition.Start"
+                                   LabelPlacement="Placement.Start"
                                    ThumbIconColor="Color.Dark"
                                    Disabled="IsLocked"
                                    ThumbIcon="@IsEnabledIcon"
@@ -41,7 +41,7 @@
                                    Label="Lock"
                                    Value="IsLocked"
                                    Color="Color.Primary"
-                                   LabelPosition="LabelPosition.Start"
+                                   LabelPlacement="Placement.Start"
                                    ThumbIconColor="Color.Dark"
                                    ThumbIcon="@IsLockedIcon"
                                    ValueChanged="IsLockedChanged"/>
