--- a/src/BaroquenMelody.App.Components/Shared/ConfirmCompositionDialogue.razor
+++ b/src/BaroquenMelody.App.Components/Shared/ConfirmCompositionDialogue.razor
@@ -19,7 +19,7 @@
 
 @code {
 
-    [CascadingParameter] private MudDialogInstance? MudDialog { get; set; }
+    [CascadingParameter] private IMudDialogInstance? MudDialog { get; set; }
 
     private void SaveComposition() => MudDialog?.Close(DialogResult.Ok(true));
 
